--- a/Final Project TV Show Review/signin.css
+++ b/Final Project TV Show Review/signin.css
@@ -85,7 +85,7 @@ input
     color: white;
 }
 
-#registerBtn
+#signinBtn
 {
     margin-top: 30px;
     width: 100%;
@@ -95,6 +95,7 @@ input
     border: #d40000;
     border-radius: 3%;
     color: white;
+    cursor: pointer;
 }
 
 #loginref
