--- a/Final Project TV Show Review/signup.css
+++ b/Final Project TV Show Review/signup.css
@@ -43,7 +43,7 @@ body
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
 
-#signinDiv
+#signupDiv
 {
     position: absolute;
     top: 45%;
@@ -56,7 +56,7 @@ body
     z-index: 2; /* Specify a stack order in case you're using a different order for other elements */
 }
 
-#signin
+#signup
 {
     position: absolute;
     top: 50%;
@@ -69,7 +69,7 @@ body
     text-align: center;
 }
 
-#signin h1
+#signup h1
 {
     font-family: 'Varela Round', sans-serif;
 }
@@ -85,7 +85,7 @@ input
     color: white;
 }
 
-#registerBtn
+#signupBtn
 {
     margin-top: 30px;
     width: 100%;
@@ -95,6 +95,7 @@ input
     border: #d40000;
     border-radius: 3%;
     color: white;
+    cursor: pointer;
 }
 
 #loginref
@@ -104,7 +105,7 @@ input
     font-size: 15px;
 }
 
-#signupLink
+#signinLink
 {
     color: blue;
     text-decoration: underline;
