--- a/Final Project TV Show Review/signin.css
+++ b/Final Project TV Show Review/signin.css
@@ -113,6 +113,13 @@ input
     font-family: 'Varela Round', sans-serif;
 }
 
+.error
+{
+    color: #d40000;
+    margin-top: 30px;
+    font-size: large;
+}
+
 /*
 For Red Coloring
 #d40000
